# liberte

./: CONTRIBUTING.MD  README.MD  pyproject.toml  pytest.init
src/app/: main.py  settings.py
src/app/bot/: main.py  settings.py
src/app/bot/core/: init_logging.py  paths.py  startup.py
src/app/bot/modules/main/: logging.py  router.py  settings.py
src/app/bot/modules/test/: __init__.py  response.py  settings.py
src/app/bot/modules/test/childes/test/: __init__.py  response.py  settings.py
src/app/bot/modules/test/handlers/: test.py
src/app/core/: init_logging.py
src/app/settings/: init_logging.py
src/core/: cli.py  constants.py  context.py
src/core/context/: context.py
src/core/contracts/: constants.py  module.py  templates.py  validate.py
src/core/error_handlers/: decorator.py  format.py  helpers.py  network.py
src/core/logging/: logging.py
src/core/module_loader/: creator.py  creator_new.py  importlib_loader.py  loader.py  register.py  remover.py  remover_new.py  templates.py
src/core/module_loader/runtime/: register.py  validate.py
src/core/module_loader/scaffolding/: creator.py  remover.py
src/core/paths/: paths.py
src/core/response/: response_data.py
src/core/scripts/bot/: create_module.py  remove_module.py
src/core/utils/: chek.py  filesistem.py  logging.py  network.py
tests/: test_create_module.py  test_load_modules.py  test_remove_module.py
