[project]
name = "func-store-core"
version = "2.0.0"
description = "Modular aiogram bot core"
requires-python = ">=3.8"

dependencies = [
    "pydantic-settings<=2.2.1",
    "pydantic<=2.6.1",
    "aiogram>=3.13.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
cli = "core.cli:main"
bot = "app.main:main"